metadata/force-app/main/default/objects/CustomName_HLynO__c/CustomName_HLynO__c.object-meta.xml
<CustomObject>
    <description>Description_mpyGN</description>
    <label>CustomLabel_NQyBa</label>
    <nameField>
        <label>CustomLabel_NQyBa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_NQyBas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>