metadata/force-app/main/default/objects/CustomName_HLynO__c/fields/CustomField_eESxe__c.field-meta.xml
<CustomField>
    <fullName>CustomField_eESxe__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldQzdGf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>