metadata/force-app/main/default/objects/CustomName_HLynO__c/fields/CustomField_TbgNq__c.field-meta.xml
<CustomField>
    <fullName>CustomField_TbgNq__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldmBEcv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>